--- a/src/main/webapp/secured/user/pretragaPregledDogadaja.xhtml
+++ b/src/main/webapp/secured/user/pretragaPregledDogadaja.xhtml
@@ -55,7 +55,7 @@
 
 
         <p:panel id="panel_filter2" header="Pretraga događaja" style="margin-top:10px; color: #dfefff" toggleable="true"
-                 toggleSpeed="500" closeSpeed="500" toggleableHeader="true" collapsed="false" widgetVar="widgetFilter">
+                 toggleSpeed="500" toggleableHeader="true"  widgetVar="widgetFilter">
 
             <h:panelGrid columns="2" id="inputFormPanelGrid">
                 <h:panelGrid columns="2">
@@ -235,7 +235,7 @@
         </p:panel>
 
         <p:panel id="panel_calendar" header="Pregled događaja" style="margin-top:5px; color: #dfefff" toggleable="true"
-                 toggleSpeed="500" closeSpeed="500" toggleableHeader="true" collapsed="false" widgetVar="widgetFilter">
+                 toggleSpeed="500"  toggleableHeader="true" collapsed="true" widgetVar="widgetCalendar">
 
         </p:panel>
 
