--- a/src/main/webapp/secured/user/pretragaPregledDogadaja.xhtml
+++ b/src/main/webapp/secured/user/pretragaPregledDogadaja.xhtml
@@ -241,7 +241,8 @@
                         <p:commandButton icon="pi pi-pencil" title="Dodaj u moj kalendar"
                                          styleClass="edit-button rounded-button ui-button-success"
                                          rendered="#{filterDogadajDto.korisnikDogadaj == null or !filterDogadajDto.korisnikDogadaj.equals(request.remoteUser) }"
-                                         actionListener="#{pretragaPregledDogadajaController.dodajUKalendar(request.remoteUser, filterDogadajDto.sifraDogadaja)}" update="growl"
+                                         actionListener="#{pretragaPregledDogadajaController.dodajUKalendar(request.remoteUser, filterDogadajDto.sifraDogadaja)}"
+                                         update="growl"
                         >
                             <p:confirm type="popup" header="Confirmation" message="Jeste li sigurni da želite dodati događaj u vaš kalendar?" icon="pi pi-exclamation-triangle"/>
 
@@ -250,7 +251,8 @@
                         </p:commandButton>
                         <p:commandButton class="ui-button-warning rounded-button" icon="pi pi-trash" title="Izbriši iz mojeg kalendara"
                                          rendered="#{filterDogadajDto.korisnikDogadaj != null and filterDogadajDto.korisnikDogadaj.equals(request.remoteUser) }"
-                                         actionListener="#{pretragaPregledDogadajaController.makniIzKalendara(request.remoteUser, filterDogadajDto.sifraDogadaja)}" update="growl"
+                                         actionListener="#{pretragaPregledDogadajaController.makniIzKalendara(request.remoteUser, filterDogadajDto.sifraDogadaja)}"
+                                         update="growl"
                         >
                             <p:confirm type="popup" header="Confirmation" message="Jeste li sigurni da želite izbrisati događaj iz vašeg kalendara?" icon="pi pi-info-circle"/>
                         </p:commandButton>
