--- a/src/main/webapp/secured/super-admin/pregledKorisnika.xhtml
+++ b/src/main/webapp/secured/super-admin/pregledKorisnika.xhtml
@@ -11,7 +11,7 @@
 <!--<h:outputStylesheet name="primeicons/primeicons.css" library="primefaces"/>-->
 
 <h:head>
-    <title>Unos / Ažuriranje događaja</title>
+    <title>Pregled korisnika</title>
 
 </h:head>
 
