--- a/src/main/webapp/secured/super-admin/pregledKorisnika.xhtml
+++ b/src/main/webapp/secured/super-admin/pregledKorisnika.xhtml
@@ -57,218 +57,41 @@
 
 
     <h:form id="mainForm">
-        <p:panel id="panel_unos" header="Unos / ažuriranje događaja" style="margin-top:10px; color: #dfefff" toggleable="true"
-                 toggleSpeed="500"
-                 toggleableHeader="true" widgetVar="widgetInput">
-            <h:panelGrid>
-                <p:messages id="messages" showDetail="true" closable="true">
-                    <p:autoUpdate/>
-                </p:messages>
-            </h:panelGrid>
-            <h:panelGrid id="panelGridInputForm" columns="2">
-                <p:outputLabel for="sifraDogadajaInput" value="Šifra događaja:   "/>
-                <p:inputText id="sifraDogadajaInput"
-                             value="#{dogadajiController.dogadajDto.sifraDogadaja}"
-                             readonly="true" disabled="true"/>
-                <p:outputLabel for="nazivDogadaja" value="Naziv događaja   :   "/>
-                <p:inputTextarea id="nazivDogadaja"
-                                 value="#{dogadajiController.dogadajDto.nazivDogadaja}" rows="3"
-                                 cols="40"
-                                 maxlength="250" autoResize="false" required="false"
-                                 requiredMessage="Naziv događaja je obavezan podatak!"/>
 
-                <p:outputLabel for="grad" value="Grad:   "/>
-                <p:selectOneMenu id="grad"
-                                 value="#{dogadajiController.dogadajDto.gradDogadajaDto.sifraGrada}"
-                                 filter="true"
-                                 filterMatchMode="startsWith" style="width:250px" required="false"
-                                 requiredMessage="Grad je obavezan podatak!">
-                    <f:selectItems value="#{dogadajiController.gradSelectItems}"/>
-                </p:selectOneMenu>
+        <p:panel id="panel_filter2" header="Pregled korisnika aplikacije" style="margin-top:5px; color: #dfefff" toggleable="false"
+                 toggleSpeed="500" closeSpeed="500" toggleableHeader="false" collapsed="false" widgetVar="widgetFilter">
 
-                <p:outputLabel for="vrijemeOd" value="Vrijeme od   :"/>
-                <p:calendar id="vrijemeOd"
-                            value="#{dogadajiController.dogadajDto.vrijemeOd}" locale="de"
-                            pattern="dd.MM.yyyy HH:mm">
-                    <f:converter converterId="LocalDateConverter"/>
-                </p:calendar>
-
-                <p:outputLabel for="vrijemeDo" value="Vrijeme do   :"/>
-                <p:calendar id="vrijemeDo"
-                            value="#{dogadajiController.dogadajDto.vrijemeDo}" locale="de"
-                            pattern="dd.MM.yyyy HH:mm">
-                    <f:converter converterId="LocalDateConverter"/>
-                </p:calendar>
-
-                <h:outputText value="Slobodan ulaz: "/>
-                <p:selectBooleanButton id="value1"
-                                       value="#{dogadajiController.dogadajDto.slobodanUlazBoolen}"
-                                       onLabel="Da"
-                                       offLabel="Ne"
-                                       onIcon="pi pi-check" offIcon="pi pi-times"
-                                       style="width:60px"/>
-                <p:outputLabel for="kretorDogadaja" value="Kreator događaja:   "/>
-                <p:inputText id="kretorDogadaja"
-                             value="#{dogadajiController.dogadajDto.kreatorDogadaja.korisnickoIme}"
-                             readonly="true" disabled="true"/>
-                <p:commandButton value="Novi" actionListener="#{dogadajiController.resetDto}" id="novizapis"
-                                 style="margin-right:20px;margin-top:10px;margin-bottom: 10px " ajax="true"
-                                 update="panelGridInputForm, filterAdvanced" icon="pi pi-replay"/>
-                <p:commandButton value="Spremi" actionListener="#{dogadajiController.save}" id="spremi"
-                                 style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"
-                                 update="panel_unos, filterAdvanced" icon="pi pi-save"/>
-
-            </h:panelGrid>
-        </p:panel>
-
-        <p:panel id="panel_filter2" header="Pretraga događaja" style="margin-top:5px; color: #dfefff" toggleable="true"
-                 toggleSpeed="500" closeSpeed="500" toggleableHeader="true" collapsed="false" widgetVar="widgetFilter">
-
-            <h:panelGrid columns="2" id="inputFormPanelGrid">
-                <h:panelGrid columns="2">
-                    <p:outputLabel for="nazivDogadajaFilter" value="Naziv događaja:   "/>
-                    <p:inputTextarea id="nazivDogadajaFilter"
-                                     value="#{dogadajiController.dogadajFilterDto.nazivDogadaja}"
-                                     rows="3" cols="40"
-                                     maxlength="250" autoResize="false" required="false"/>
-
-                    <p:outputLabel for="vrijemeOdPocetakFilter" value="Vrijeme od (početak)  :"/>
-                    <p:calendar id="vrijemeOdPocetakFilter"
-                                value="#{dogadajiController.dogadajFilterDto.vrijemeOdPocetak}"
-                                locale="de" pattern="dd.MM.yyyy HH:mm">
-                        <f:converter converterId="LocalDateConverter"/>
-                    </p:calendar>
-                    <p:outputLabel for="vrijemeDoPocetakFilter" value="Vrijeme do (početak)  :"/>
-                    <p:calendar id="vrijemeDoPocetakFilter"
-                                value="#{dogadajiController.dogadajFilterDto.vrijemeDoPocetak}"
-                                locale="de" pattern="dd.MM.yyyy HH:mm">
-                        <f:converter converterId="LocalDateConverter"/>
-                    </p:calendar>
-                    <p:outputLabel for="vrijemeOdKrajFilter" value="Vrijeme od (kraj)  :"/>
-                    <p:calendar id="vrijemeOdKrajFilter" value="#{dogadajiController.dogadajFilterDto.vrijemeOdKraj}"
-                                locale="de" pattern="dd.MM.yyyy HH:mm">
-                        <f:converter converterId="LocalDateConverter"/>
-                    </p:calendar>
-                    <p:outputLabel for="vrijemeDoKrajFilter" value="Vrijeme do (početak)  :"/>
-                    <p:calendar id="vrijemeDoKrajFilter" value="#{dogadajiController.dogadajFilterDto.vrijemeDoKraj}"
-                                locale="de" pattern="dd.MM.yyyy HH:mm">
-                        <f:converter converterId="LocalDateConverter"/>
-                    </p:calendar>
-                    <p:outputLabel for="ulazSlobodanFilter" value="Slobodan ulaz:   "/>
-                    <p:selectOneMenu id="ulazSlobodanFilter" value="#{dogadajiController.dogadajFilterDto.slobodanUlaz}"
-                                     filter="false" style="width:100px">
-                        <f:selectItems value="#{dogadajiController.slobodanUlazFilterSelectItems}"/>
-                    </p:selectOneMenu>
-                </h:panelGrid>
-                <h:panelGrid columns="2">
-                    <h:outputLabel for="sifraFilter" value="Šifra događaja:"/>
-                    <p:inputText id="sifraFilter" value="#{dogadajiController.dogadajFilterDto.sifraDogadaja}"/>
-
-                    <h:outputLabel for="regijaFilter" value="Regija:"/>
-                    <p:selectCheckboxMenu id="regijaFilter"
-                                          value="#{dogadajiController.dogadajFilterDto.odabraneRegije}"
-                                          label="Regija" multiple="true"
-                                          filter="false" panelStyle="width:250px">
-                        <f:selectItems value="#{dogadajiController.regijaFilterSelectItems}"/>
-                        <p:ajax update="zupanijaFilter, gradFilter"/>
-                    </p:selectCheckboxMenu>
-
-                    <h:outputLabel for="zupanijaFilter" value="Županija:"/>
-                    <p:selectCheckboxMenu id="zupanijaFilter"
-                                          value="#{dogadajiController.dogadajFilterDto.odabraneZupanije}"
-                                          label="Županija"
-                                          multiple="true"
-                                          filter="true" filterMatchMode="startsWith" panelStyle="width:250px">
-                        <f:selectItems
-                                value="#{dogadajiController.getZupanija(dogadajiController.dogadajFilterDto.odabraneRegije)}"/>
-                        <p:ajax update="gradFilter"/>
-                    </p:selectCheckboxMenu>
-
-
-                    <h:outputLabel for="velicinaGradaFilter" value="Veličina grada:"/>
-                    <p:selectCheckboxMenu id="velicinaGradaFilter"
-                                          value="#{dogadajiController.dogadajFilterDto.odabraneVelicineGrada}"
-                                          label="Veličine grada" multiple="true"
-                                          panelStyle="width:250px">
-                        <f:selectItems value="#{dogadajiController.velicinaGradaFilterSelectItems}"/>
-                        <p:ajax update="gradFilter"/>
-                    </p:selectCheckboxMenu>
-
-                    <h:outputLabel for="gradFilter" value="Grad:"/>
-                    <p:selectCheckboxMenu id="gradFilter" value="#{dogadajiController.dogadajFilterDto.odabraniGradovi}"
-                                          label="Grad" multiple="true"
-                                          filter="true" filterMatchMode="startsWith" panelStyle="width:250px">
-                        <f:selectItems
-                                value="#{dogadajiController.getGrad(dogadajiController.dogadajFilterDto.odabraneRegije, dogadajiController.dogadajFilterDto.odabraneZupanije, dogadajiController.dogadajFilterDto.odabraneVelicineGrada)}"/>
-                    </p:selectCheckboxMenu>
-                    <p:outputLabel for="kreatorFilter" value="Kreator:   "/>
-                    <p:selectOneMenu id="kreatorFilter" value="#{dogadajiController.dogadajFilterDto.kreator}"
-                                     filter="false" style="width:100px">
-                        <f:selectItems value="#{dogadajiController.kreatorFilterSelectItems}"/>
-                    </p:selectOneMenu>
-
-                    <p:commandButton value="Poništi filter" actionListener="#{dogadajiController.resetFilterDto}"
-                                     id="filterreset" style="margin-right:20px;margin-top:10px;margin-bottom: 10px"
-                                     ajax="true"
-                                     update="panel_filter2" icon="pi pi-replay"/>
-                    <p:commandButton value="Pretraži" actionListener="#{dogadajiController.getFilterListDogadaj}"
-                                     id="filter" style="margin-right:20px;margin-top:10px;margin-bottom: 10px"
-                                     ajax="true" update="filterAdvanced"
-                                     icon="pi pi-search"/>
-
-                </h:panelGrid>
-            </h:panelGrid>
             <h:panelGrid columns="2">
-                <p:dataTable id="filterAdvanced" var="filterDogadajDto"
+                <p:dataTable id="filterAdvanced" var="korisnikDogadajDto"
                              rows="10"
                              paginator="true"
+                             paginatorPosition="bottom"
                              paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
                              rowsPerPageTemplate="5,10,15"
-                             value="#{dogadajiController.dogadajiFilterList}"
+                             value="#{pregledKorisnikaController.korisnikDtoList}"
                              selectionMode="single"
-                             rowKey="#{filterDogadajDto.sifraDogadaja}"
-                             emptyMessage="Nije pronađen niti jedan događaj">
-                    <f:facet name="header">
-                        Rezultati pretrage
-                    </f:facet>
-                    <p:ajax event="rowSelect" listener="#{dogadajiController.onTableRowSelect}"
-                            update="mainForm:panel_unos"/>
-                    <p:column headerText="Šifra">
-                        <h:outputText value="#{filterDogadajDto.sifraDogadaja}"/>
+                             rowKey="#{korisnikDogadajDto.korisnickoIme}"
+                             allowUnsorting="true" sortMode="single"
+                             emptyMessage="Ne postoji niti jedan događaj">
+
+                    <p:column sortBy="#{korisnikDogadajDto.korisnickoIme}" headerText="Korisničko ime">
+                        <h:outputText value="#{korisnikDogadajDto.korisnickoIme}"/>
                     </p:column>
-                    <p:column headerText="Naziv">
-                        <h:outputText value="#{filterDogadajDto.nazivDogadaja}"/>
+                    <p:column sortBy="#{korisnikDogadajDto.ime}" headerText="Ime">
+                        <h:outputText value="#{korisnikDogadajDto.ime}"/>
                     </p:column>
-                    <p:column headerText="Vrijeme od">
-                        <h:outputText value="#{filterDogadajDto.vrijemeOd}">
-                            <f:converter converterId="LocalDateConverter"/>
-                        </h:outputText>
+                    <p:column sortBy="#{korisnikDogadajDto.prezime}" headerText="Prezime">
+                        <h:outputText value="#{korisnikDogadajDto.prezime}"/>
                     </p:column>
-                    <p:column headerText="Vrijeme do">
-                        <h:outputText value="#{filterDogadajDto.vrijemeDo}">
-                            <f:converter converterId="LocalDateConverter"/>
-                        </h:outputText> </p:column>
-                    <p:column headerText="Ulaz slobodan">
-                        <h:outputText value="#{filterDogadajDto.slobodanUlaz}"/>
+                    <p:column sortBy="#{korisnikDogadajDto.oib}" headerText="OIB">
+                        <h:outputText value="#{korisnikDogadajDto.oib}"/>
                     </p:column>
-                    <p:column headerText="Grad">
-                        <h:outputText value="#{filterDogadajDto.gradDogadajaDto.nazivGrada}"/>
+                    <p:column sortBy="#{korisnikDogadajDto.email}" headerText="Email">
+                        <h:outputText value="#{korisnikDogadajDto.email}"/>
                     </p:column>
-                    <p:column headerText="Veličina grada">
-                        <h:outputText value="#{filterDogadajDto.gradDogadajaDto.velicinaGradaDto.nazivVelicineGrada}"/>
-                    </p:column>
-                    <p:column headerText="Županija">
-                        <h:outputText
-                                value="#{filterDogadajDto.gradDogadajaDto.organizacijskaJedinicaDto.nazivOrgJedinice}"/>
-                    </p:column>
-                    <p:column headerText="Regija">
-                        <h:outputText
-                                value="#{filterDogadajDto.gradDogadajaDto.organizacijskaJedinicaDto.nadredenaOrganizacijeDto.nazivOrgJedinice}"/>
-                    </p:column>
-                    <p:column headerText="Kreator">
-                        <h:outputText
-                                value="#{filterDogadajDto.kreatorDogadaja.korisnickoIme}"/>
+                    <p:column sortBy="#{korisnikDogadajDto.tipKorisnika}" headerText="Uloga">
+                        <h:outputText value="#{korisnikDogadajDto.tipKorisnika}"/>
                     </p:column>
                 </p:dataTable>
             </h:panelGrid>
