session timeout, korisnici INIT

--- a/src/main/webapp/secured/user/pretragaPregledDogadaja.xhtml
+++ b/src/main/webapp/secured/user/pretragaPregledDogadaja.xhtml
@@ -66,7 +66,7 @@
                         style="color: black; font-size:larger; font-weight:600"/>
 
             <p:menuitem value="Korisnici"
-                        icon="pi pi-fw pi-users"
+                        icon="pi pi-fw pi-user-plus"
                         url="http://localhost:9080/online-events/secured/super-admin/pregledKorisnika.xhtml"
                         rendered="#{request.isUserInRole('admin')}"
                         style="color: black; font-size:larger; font-weight:600"/>
