--- a/src/main/webapp/secured/super-admin/pregledKorisnika.xhtml
+++ b/src/main/webapp/secured/super-admin/pregledKorisnika.xhtml
@@ -11,7 +11,7 @@
 <!--<h:outputStylesheet name="primeicons/primeicons.css" library="primefaces"/>-->
 
 <h:head>
-    <title>Pregled korisnika</title>
+    <title>Korisnici</title>
 
 </h:head>
 
@@ -36,7 +36,7 @@
                         style="color: black; font-size:larger; font-weight:600"/>
 
             <p:menuitem value="Korisnici"
-                        icon="pi pi-fw pi-users"
+                        icon="pi pi-fw pi-user-plus"
                         url="http://localhost:9080/online-events/secured/super-admin/pregledKorisnika.xhtml"
                         rendered="#{request.isUserInRole('admin')}"
                         style="color: black; font-size:larger; font-weight:600"/>
@@ -57,6 +57,71 @@
 
 
     <h:form id="mainForm">
+        <p:panel id="panel_unos" header="Unos / ažuriranje korisnika" style="margin-top:10px; color: #dfefff" toggleable="true"
+                 toggleSpeed="500"
+                 toggleableHeader="true" widgetVar="widgetInput">
+        <h:panelGrid>
+            <p:messages id="messages" showDetail="true" closable="true">
+                <p:autoUpdate/>
+            </p:messages>
+        </h:panelGrid>
+            <h:panelGrid id="panelGridInputForm" columns="2">
+                <p:outputLabel for="korisnickoImeInput" value="Korisničko ime:   "/>
+                <p:inputText id="korisnickoImeInput"
+                             value="#{dogadajiController.dogadajDto.nazivDogadaja}"
+                             maxlength="20"
+                             required="true"
+                             requiredMessage="Korisničko ime je obavezan podatak!"/>
+                <p:outputLabel for="imeInput" value="Ime   :   "/>
+                <p:inputText id="imeInput"
+                             value="#{dogadajiController.dogadajDto.nazivDogadaja}"
+                             maxlength="50"  size="50"
+                             required="true"
+                             requiredMessage="Ime korisnika je obavezan podatak!"/>
+
+                <p:outputLabel for="prezimeInput" value="Prezime   :   "/>
+                <p:inputText id="prezimeInput"
+                             value="#{dogadajiController.dogadajDto.nazivDogadaja}"
+                             maxlength="50"  size="50"
+                             required="true"
+                             requiredMessage="Prezime korisnika je obavezan podatak!"/>
+
+                <p:outputLabel for="oibInput" value="OIB   :   "/>
+                <p:inputMask id="oibInput"
+                             value="#{dogadajiController.dogadajDto.nazivDogadaja}"
+                             maxlength="11"
+                             required="true"
+                             requiredMessage="OIB korisnika je obavezan podatak!"
+                             mask="99999999999" validateMask="true"/>
+
+                <p:outputLabel for="emailInput" value="Email   :   "/>
+                <p:inputText id="emailInput"
+                             value="#{dogadajiController.dogadajDto.nazivDogadaja}"
+                             maxlength="50" size="50"
+                             required="true"
+                             requiredMessage="Email korisnika je obavezan podatak!"/>
+
+                <p:outputLabel for="tipKorsnikaInput" value="Uloga:   "/>
+                <p:selectOneMenu id="tipKorsnikaInput"
+                                 value="#{dogadajiController.dogadajDto.gradDogadajaDto.sifraGrada}"
+                                 style="width:250px" required="true"
+                                 requiredMessage="Uloga korisnika je obavezan podatak!">
+                    <f:selectItems value="#{dogadajiController.gradSelectItems}"/>
+                </p:selectOneMenu>
+
+
+                <p:commandButton value="Novi" actionListener="#{dogadajiController.resetDto}" id="novizapis"
+                                 style="margin-right:20px;margin-top:10px;margin-bottom: 10px " ajax="true"
+                                 update="panelGridInputForm, filterAdvanced" icon="pi pi-replay"/>
+                <p:commandButton value="Spremi" actionListener="#{dogadajiController.save}" id="spremi"
+                                 style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"
+                                 update="panel_unos, filterAdvanced" icon="pi pi-save"/>
+
+            </h:panelGrid>
+        </p:panel>
+
+
+
 
         <p:panel id="panel_filter2" header="Pregled korisnika aplikacije" style="margin-top:5px; color: #dfefff" toggleable="false"
                  toggleSpeed="500" closeSpeed="500" toggleableHeader="false" collapsed="false" widgetVar="widgetFilter">
