--- a/src/main/webapp/secured/super-admin/pregledKorisnika.xhtml
+++ b/src/main/webapp/secured/super-admin/pregledKorisnika.xhtml
@@ -70,27 +70,28 @@
                 <p:inputText id="korisnickoImeInput"
                              value="#{pregledKorisnikaController.korisnikDto.korisnickoIme}"
                              maxlength="20"
-                             required="true"
-                             requiredMessage="Korisničko ime je obavezan podatak!"/>
+                             required="false    " />
+<!--                             requiredMessage="Korisničko ime je obavezan podatak!"-->
+
                 <p:outputLabel for="imeInput" value="Ime   :   "/>
                 <p:inputText id="imeInput"
                              value="#{pregledKorisnikaController.korisnikDto.ime}"
                              maxlength="50"  size="50"
-                             required="true"
-                             requiredMessage="Ime korisnika je obavezan podatak!"/>
+                             required="false" />
+<!--                             requiredMessage="Ime korisnika je obavezan podatak!"-->
 
                 <p:outputLabel for="prezimeInput" value="Prezime   :   "/>
                 <p:inputText id="prezimeInput"
                              value="#{pregledKorisnikaController.korisnikDto.prezime}"
                              maxlength="50"  size="50"
-                             required="true"
+                             required="false"
                              requiredMessage="Prezime korisnika je obavezan podatak!"/>
 
                 <p:outputLabel for="oibInput" value="OIB   :   "/>
                 <p:inputMask id="oibInput"
                              value="#{pregledKorisnikaController.korisnikDto.oib}"
                              maxlength="11"
-                             required="true"
+                             required="false"
                              requiredMessage="OIB korisnika je obavezan podatak!"
                              mask="99999999999" validateMask="true"/>
 
@@ -98,13 +99,13 @@
                 <p:inputText id="emailInput"
                              value="#{pregledKorisnikaController.korisnikDto.email}"
                              maxlength="50" size="50"
-                             required="true"
+                             required="false"
                              requiredMessage="Email korisnika je obavezan podatak!"/>
 
                 <p:outputLabel for="tipKorsnikaInput" value="Uloga:   "/>
                 <p:selectOneMenu id="tipKorsnikaInput"
                                  value="#{pregledKorisnikaController.korisnikDto.tipKorisnika}"
-                                 style="width:250px" required="true"
+                                 style="width:250px" required="false"
                                  requiredMessage="Uloga korisnika je obavezan podatak!">
                     <f:selectItems value="#{pregledKorisnikaController.tipKorisnikaSelectItems}"/>
                 </p:selectOneMenu>
@@ -123,8 +124,54 @@
 
 
 
-        <p:panel id="panel_filter2" header="Pregled korisnika aplikacije" style="margin-top:5px; color: #dfefff" toggleable="false"
-                 toggleSpeed="500" closeSpeed="500" toggleableHeader="false" collapsed="false" widgetVar="widgetFilter">
+        <p:panel id="panel_filter2" header="Pretraga korisnika aplikacije" style="margin-top:5px; color: #dfefff" toggleable="true"
+                 toggleSpeed="500" closeSpeed="500" toggleableHeader="true" collapsed="false" widgetVar="widgetFilter">
+
+            <h:panelGrid columns="2" id="inputFormPanelGrid">
+
+                <p:outputLabel for="korisnickoImeFilter" value="Korisničko ime:   "/>
+                <p:inputText id="korisnickoImeFilter"
+                             value="#{pregledKorisnikaController.korisnikFilterDto.korisnickoIme}"
+                             maxlength="20" />
+
+                <p:outputLabel for="imeFilter" value="Ime   :   "/>
+                <p:inputText id="imeFilter"
+                             value="#{pregledKorisnikaController.korisnikFilterDto.ime}"
+                             maxlength="50"  size="50" />
+
+                <p:outputLabel for="prezimeFilter" value="Prezime   :   "/>
+                <p:inputText id="prezimeFilter"
+                             value="#{pregledKorisnikaController.korisnikFilterDto.prezime}"
+                             maxlength="50"  size="50" />
+
+                <p:outputLabel for="oibFilter" value="OIB   :   "/>
+                <p:inputMask id="oibFilter"
+                             value="#{pregledKorisnikaController.korisnikFilterDto.oib}"
+                             maxlength="11"
+                             mask="99999999999" validateMask="true"/>
+
+                <p:outputLabel for="emailFilter" value="Email   :   "/>
+                <p:inputText id="emailFilter"
+                             value="#{pregledKorisnikaController.korisnikFilterDto.email}"
+                             maxlength="50" size="50" />
+
+                <p:outputLabel for="tipKorsnikaFilter" value="Uloga:   "/>
+                <p:selectOneMenu id="tipKorsnikaFilter"
+                                 value="#{pregledKorisnikaController.korisnikFilterDto.tipKorisnika}"
+                                 style="width:250px">
+                    <f:selectItems value="#{pregledKorisnikaController.tipKorisnikaSelectItems}"/>
+                </p:selectOneMenu>
+
+                    <p:commandButton value="Poništi filter" actionListener="#{pregledKorisnikaController.resetFilterDto}"
+                                     id="filterreset" style="margin-right:20px;margin-top:10px;margin-bottom: 10px"
+                                     ajax="true"
+                                     update="panel_filter2" icon="pi pi-replay"/>
+                    <p:commandButton value="Pretraži" actionListener="#{pregledKorisnikaController.getFilterListKorisnik}"
+                                     id="filter" style="margin-right:20px;margin-top:10px;margin-bottom: 10px"
+                                     ajax="true" update="filterAdvanced"
+                                     icon="pi pi-search"/>
+
+            </h:panelGrid>
 
             <h:panelGrid columns="2">
                 <p:dataTable id="filterAdvanced" var="korisnikDogadajDto"
@@ -139,6 +186,8 @@
                              rowKey="#{korisnikDogadajDto.korisnickoIme}"
                              allowUnsorting="true" sortMode="single"
                              emptyMessage="Ne postoji niti jedan korisnik">
+                    <p:ajax event="rowSelect" listener="#{pregledKorisnikaController.onTableRowSelect}"
+                            update="mainForm:panel_unos"/>
 
                     <p:column sortBy="#{korisnikDogadajDto.korisnickoIme}" headerText="Korisničko ime">
                         <h:outputText value="#{korisnikDogadajDto.korisnickoIme}"/>
